crates/mun_codegen/src/snapshots/mun_codegen__test__assign_bit_op_bool.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign_bitand(a: bool, b: bool) -> bool {\n        a &= b;\n        a\n    }\n    pub fn assign_bitor(a: bool, b: bool) -> bool {\n        a |= b;\n        a\n    }\n    pub fn assign_bitxor(a: bool, b: bool) -> bool {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i1 @assign_bitand(i1 %0, i1 %1) {
body:
  %bit_and = and i1 %0, %1
  ret i1 %bit_and
}

define i1 @assign_bitor(i1 %0, i1 %1) {
body:
  %bit_or = or i1 %0, %1
  ret i1 %bit_or
}

define i1 @assign_bitxor(i1 %0, i1 %1) {
body:
  %bit_xor = xor i1 %0, %1
  ret i1 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
