crates/mun_codegen/src/snapshots/mun_codegen__test__assign_bit_op_u8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign_bitand(a: u8, b: u8) -> u8 {\n        a &= b;\n        a\n    }\n    pub fn assign_bitor(a: u8, b: u8) -> u8 {\n        a |= b;\n        a\n    }\n    pub fn assign_bitxor(a: u8, b: u8) -> u8 {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i8 @assign_bitand(i8 %0, i8 %1) {
body:
  %bit_and = and i8 %0, %1
  ret i8 %bit_and
}

define i8 @assign_bitor(i8 %0, i8 %1) {
body:
  %bit_or = or i8 %0, %1
  ret i8 %bit_or
}

define i8 @assign_bitxor(i8 %0, i8 %1) {
body:
  %bit_xor = xor i8 %0, %1
  ret i8 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
